added swagger-doc for resume handlers
